tests/paczka1/small_fuzzy/29376236.err
Error in line 3: ToZhc5 S18 44,6
Error in line 7: l453o0 S220 91,9
